# stagehand-python

./:  .env.example  .bumpversion.cfg  .env.example  .gitignore  CHANGELOG.md  CHANGELOG.txt  MANIFEST.in  README.md  format  format.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
.changeset/: README.md  ambrosial-anaconda-of-blizzard.md  amusing-ivory-termite.md  arrogant-caiman-of-competence.md  belligerent-gharial-of-attack.md  config.json  daffy-rapid-turaco.md  dog-of-interesting-energy.md  dragon-of-fabulous-persistence.md  dramatic-worm-of-pizza.md  economic-teal-albatross.md  feathered-singing-duck.md  fortunate-friendly-avocet.md  functional-pink-centipede.md  fuzzy-uppish-capybara.md  gorilla-of-strongest-novelty.md  horned-giga-cockatoo.md  inventive-tangible-hyena.md  literate-dancing-tuatara.md  masterful-amiable-leopard.md  nostalgic-tireless-kestrel.md  outrageous-adept-hyena.md  polite-dogfish-of-purring.md  practical-tunneling-malkoha.md  prompt-loud-hound.md  sceptical-mutant-shrew.md  silkworm-of-regular-downpour.md  smiling-snobbish-cockle.md  spectral-flat-trout.md  spectral-labrador-of-tolerance.md  succinct-grinning-urchin.md  towering-organic-grouse.md  vegan-intrepid-mustang.md  wakeful-pogona-of-stamina.md  warping-colorful-shellfish.md  whispering-brave-potoo.md  woodoo-frog-of-growth.md
.github/: README_PUBLISHING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changesets.yml  check-changeset.yml  feature-parity.yml  linting.yml  publish.yml  release.yml  test.yml
app/: page.tsx
app/api/act/: route.ts
app/api/streamtest/: route.ts
components/client/: streamViewer.tsx
evals/: env_loader.py  init_stagehand.py  run_all_evals.py  test_observe.py  utils.py
evals/act/: google_jobs.py
evals/extract/: extract_press_releases.py
evals/observe/: __init__.py  observe_amazon_add_to_cart.py  observe_github.py  observe_simple_google_search.py  observe_taxes.py  observe_vantechjournal.py  observe_yc_startup.py
examples/: agent_example.py  agent_example_local.py  agent_example_sync.py  example.py  example_sync.py  extract-example.py  observe-example.py  quickstart.py  quickstart_jupyter_notebook.ipynb  test.py  test_sync.py
lib/: actionLogger.ts
stagehand/: __init__.py  agent.py  api.py  base.py  browser.py  client.py  config.py  context.py  domScripts.js  inference.py  logging.py  main.py  metrics.py  page.py  prompts.py  schemas.py  test_observe.py  utils.py
stagehand/a11y/: __init__.py  utils.py
stagehand/agent/: __init__.py  agent.py  anthropic_cua.py  client.py  error_handling.py  google_cua.py  image_compression_utils.py  native_agent.py  native_tools.py  openai_cua.py  security.py  tool_schema.py  utils.py
stagehand/handlers/: __init__.py  act_handler.py  act_handler_utils.py  cua_handler.py  extract_handler.py  observe_handler.py  test.py
stagehand/llm/: __init__.py  client.py  inference.py  prompts.py
stagehand/sync/: __init__.py  agent.py  client.py  context.py  page.py
stagehand/sync/a11y/: __init__.py  utils.py
stagehand/sync/handlers/: __init__.py  act_handler.py  act_handler_utils.py  extract_handler.py  observe_handler.py
stagehand/types/: __init__.py  a11y.py  agent.py  llm.py  page.py
temp/: google_genai-1.14.0-py3-none-any.whl
tests/: __init__.py  conftest.py
tests/e2e/: test_act_integration.py  test_extract_casing_normalization.py  test_extract_integration.py  test_observe_integration.py  test_stagehand_integration.py  test_workflows.py
tests/fixtures/html_pages/: contact_form.html  ecommerce_page.html
tests/functional/: test_sync_client.py
tests/integration/api/: test_core_api.py  test_frame_id_integration.py
tests/integration/local/: test_core_local.py
tests/mocks/: __init__.py  mock_browser.py  mock_llm.py  mock_server.py
tests/regression/: test_extract_aigrant_companies.py  test_ionwave.py  test_wichita.py
tests/unit/: __init__.py  test_client_api.py  test_client_concurrent_requests.py  test_client_initialization.py  test_client_lifecycle.py  test_client_lock.py  test_client_lock_scenarios.py  test_native_agent.py
tests/unit/core/: test_frame_id_tracking.py  test_live_page_proxy.py  test_page.py  test_wait_for_settled_dom.py
tests/unit/handlers/: test_act_handler.py  test_extract_handler.py  test_observe_handler.py
tests/unit/llm/: test_llm_integration.py
